--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^8.1.3",
+    "@mantine/hooks": "^8.1.3",
+    "@tabler/icons-react": "^3.34.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "leaflet": "^1.9.4",
