--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tabler/icons-react": "^3.34.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.525.0",
